# fpga-sandbox

./: .gitignore  README.md
docs/: image.md
sw/: toolchain.cmake
sw/core/: CMakeLists.txt  env.example
sw/core/app/Sources/DemoApp/: main.swift
sw/core/lib/demo-sys/: Package.swift
sw/demo/: CMakeLists.txt  env.example  toolset.json
sw/demo/app/: CMakeLists.txt  Package.swift
sw/demo/include/: module.modulemap
sw/demo/lib/: CMakeLists.txt  demo.swift
sw/demo/lib/demo/: CMakeLists.txt  Package.swift
sw/demo/lib/demo-sys/: CMakeLists.txt  demosys.swift  runtime.c
sw/demo/lib/demo-sys/Sources/Demo/include/: demo.h
sw/demo/lib/demo/Sources/DemoSwift/: DemoSwift.swift
sw/demo/src/: CMakeLists.txt  main.swift
sw/fpga/: CMakeLists.txt  Makefile  Package.swift  env.example  linker.ld  main.c  start.S  toolset.json  uart.h
sw/fpga/Sources/BSP/include/: module.modulemap
sw/fpga/Sources/demofpga/: main.swift
sw/fpga/bsp/: CMakeLists.txt  alt_sys_init.c  linker.h  linker.x  memory.gdb  settings.bsp  summary.html  system.h  toolchain.cmake
sw/fpga/bsp/HAL/inc/: intel_niosv_c.h  intel_niosv_c_irq.h
sw/fpga/bsp/HAL/src/: alt_iic_isr_register.c
sw/hps/: Makefile  Package.swift  env.example  linker.ld  main.c  start.S  toolset.json  uart.h
sw/hps/Sources/CHPSRuntime/: runtime.c
sw/hps/Sources/CHPSRuntime/include/: hps.h  module.modulemap
sw/hps/Sources/demohps/: Time.swift  main.swift  utils.swift
sw/hps/Sources/hps/: main.swift
